--- a/hw04-spring-shell/src/main/resources/messages_en.properties
+++ b/hw04-spring-shell/src/main/resources/messages_en.properties
@@ -1,4 +1,3 @@
-CsvQuestionDao.error.read.questions=Could not read questions
 ResultService.test.results=Test results:
 ResultService.student=Student: {0}
 ResultService.answered.questions.count=Answered questions count: {0}
@@ -8,6 +7,7 @@ ResultService.fail.test=Sorry. You fail test.
 IOService.error.max.attempts.inputs=Max attempts inputs reached
 StudentService.input.first.name=Please input your first name
 StudentService.input.last.name=Please input your last name
+TestService.error.read.questions=Could not read questions
 TestService.answer.the.questions=Please answer the questions below
 TestService.error.read.answer=Out of answers range
 TestService.answer.the.question=Please enter your answer(s)
