--- a/hw04-spring-shell/src/main/resources/messages_en.properties
+++ b/hw04-spring-shell/src/main/resources/messages_en.properties
@@ -4,7 +4,7 @@ ResultService.answered.questions.count=Answered questions count: {0}
 ResultService.right.answers.count=Right answers count: {0}
 ResultService.passed.test=Congratulations! You passed test!
 ResultService.fail.test=Sorry. You fail test.
-IOService.error.max.attempts.inputs=Max attempts inputs reached
+IOService.error.max.attempts.inputs=Max input attempts has been reached
 StudentService.input.first.name=Please input your first name
 StudentService.input.last.name=Please input your last name
 TestService.error.read.questions=Could not read questions
